# TATLIN_test_task

./: CMakeLists.txt  README.md  config.txt  config2.txt
inc/: main_func.hpp  settings.hpp  simulation_settings.hpp  sorting_machine.hpp  tape.hpp
inc/main_details/: main_func.hpp
inc/simulation/: simulation_exceptions.hpp  simulation_settings.hpp  sorting_machine.hpp
inc/tape/: tape.hpp  tape_exceptions.hpp
old/inc/: settings.hpp  sorting_machine.hpp  tape.hpp
old/src/: main.cpp
old/try/: a.out  file_wrapper.cc  file_wrapper.hpp  unit.cpp
src/: main.cpp
test/: do_test.sh  google_test.cpp  right_answer_gen.cpp  simlple_test_gen.py  test1.txt  test_1.txt
test/tests/: in.txt  out.txt
try/: a.out  test.tape  test_writer.cpp
